<resources>
    <string name="app_name">WooApp</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>

    <string name="welcome_to_woocommerce">Welcome To Woocommerce</string>
    <string name="don_t_have_an_account">Do not have an account?</string>
    <string name="register_exclamation_mark">Register!</string>
    <string name="login_in_your_account">Login in your account</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="collections">Collections</string>
    <string name="no_item">There is no item to display</string>
</resources>